fixed recently viewed product was not showing

--- a/src/blocks/recently-viewed-products/style.scss
+++ b/src/blocks/recently-viewed-products/style.scss
@@ -79,12 +79,6 @@
     justify-content: center;
 }
 
-.ultimate-woo-addons-recently-viewed-products__media a {
-    display: block;
-    width: 100%;
-    height: 100%;
-}
-
 .ultimate-woo-addons-recently-viewed-products__media img {
     width: 100%;
     height: 100%;
